Delete removed teas from config file while writing the new list of teas.

BUG: 255973
FIXED-IN: 1.2.2


svn path=/trunk/KDE/kdetoys/kteatime/; revision=1202288